2003-12-26  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.4, a bugfix
	release on branch_0_17

2003-12-24  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.3, a bugfix
	release on branch_0_17

2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.2, a release
	on branch_0_17 in preparation for the fink-mirrors package

2003-12-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* install.sh: no longer install the files in the mirror directory
	(they are being moved to the fink-mirrors package)

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl: move inject.pl code into Bootstrap.pm, and
	separate out the common code from inject.pl and bootstrap.pl
	into subroutines that can be used by both

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* inject.pl: Rearranged subroutines

2003-12-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl, inject.pl: Make the code modular, update copyright

2003-12-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* fink.info.in: Remove "make test" from branch_0_17
	* bootstrap.pl, inject.pl: backport changes from HEAD to branch_0_17

2003-11-19  Max Horn <max@quendi.de>

	* fink.info.in: Synced with regular fink.info file.

2003-11-18  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.17.1, a bugfix
	release on branch_0_17

2003-11-16  Max Horn <max@quendi.de>

	* fink.info.in, inject.pl: Automatically run the tests are part of
	  the CompileScript in fink.info.

2003-11-16  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* fink-virtual-pkgs.in: Make fink-virtual-pkgs print builddependsonly
	  packages on the command-line when not being called in "dpkg" or
	  "apt" mode (for debugging).
	* Makefile: added "commit" target, as well as adding the "test" target